<resources>
    <string name="app_name">Sashiv Techonology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sing_create_account">or sing create account</string>
    <string name="dhrubasha_public_school">Dhrubasha Public School</string>
    <string name="school">School</string>
    <string name="school_name">School name</string>
    <string name="email_address">Email Address</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="mob_no">Mob no</string>
    <string name="update_profile">Update Profile</string>
    <string name="no">no</string>
</resources>